# Definitions

./: .gitignore  pyproject.toml
.definitions/: __init__.py  config.cfg
.definitions/definitions/: __init__.py
definitioncli/: utils.py
definitioncli/definitions/: loader.py  manager.py
definitioncli/git/: __init__.py
definitioncli/logging/: __init__.py  formats.py  handlers.py
definitioncli/models/: terraform.py
definitioncli/templates/: __init__.py  module.tf.j2
testing/files/: tf1.tf
