[tool.poetry]
name = "definitioncli"
version = "0.1.0"
description = "A CLI tool making GIT definitions sligtly easier"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
include = [
    "definitioncli/templates/*.j2"
]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
